fixed logo text letter spacing

--- a/app/client/stylesheets/component/_general.scss
+++ b/app/client/stylesheets/component/_general.scss
@@ -124,7 +124,7 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
   text-shadow: 2px 2px 4px #000000;
   font-family: "kabegnos", sans-serif;
   text-transform: lowercase;
-  letter-spacing: -2px;
+  letter-spacing: -1px;
   font-style: normal;
   color: white;
   h1, h2, h3, h4, h5, h6 {
